<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.example</groupId>
        <artifactId>learn-claude-code-java</artifactId>
        <version>0.0.1-SNAPSHOT</version>
    </parent>
    <artifactId>s14_async_tasks</artifactId>

    <properties>
        <java.version>25</java.version>
    </properties>
</project>
